fix: remove unused middleware for some route
