# sariguna/app/company_profile/handler/handler.go
@@ -20,14 +20,14 @@ func NewCompanyProfileHandler(cps entity.CompanyProfileServiceInterface) *Compan
 	}
 }
 
-// @Summary	Get company profile
-// @Tags		company profile
-// @Accept		json
-// @Produce	json
-// @Success	200	{object}	helpers.SuccessResponseJson{data=response.CompanyProfileResponse}
-// @Failure	422	{object}	helpers.ErrorResponseJson{}
-// @Failure	400	{object}	helpers.ErrorResponseJson{}
-// @Router		/profile/ [get]
+//	@Summary	Get company profile
+//	@Tags		company profile
+//	@Accept		json
+//	@Produce	json
+//	@Success	200	{object}	helpers.SuccessResponseJson{data=response.CompanyProfileResponse}
+//	@Failure	422	{object}	helpers.ErrorResponseJson{}
+//	@Failure	400	{object}	helpers.ErrorResponseJson{}
+//	@Router		/profile/ [get]
 func (cph *CompanyProfileHandler) GetCompanyProfile(c *gin.Context) {
 	res, err := cph.CompanyProfileService.GetCompanyProfile()
 
@@ -39,15 +39,16 @@ func (cph *CompanyProfileHandler) GetCompanyProfile(c *gin.Context) {
 	c.JSON(http.StatusOK, helpers.SuccessWithDataResponse(constant.SUCCESS_GET_DATA, res))
 }
 
-// @Summary	Update company profile
-// @Tags		company profile
-// @Accept		json
-// @Produce	json
-// @Param		Update	body		request.CompanyProfileUpdate	true	"Update"
-// @Success	200		{object}	helpers.SuccessResponseJson{}
-// @Failure	422		{object}	helpers.ErrorResponseJson{}
-// @Failure	400		{object}	helpers.ErrorResponseJson{}
-// @Router		/profile/update [put]
+//	@Summary	Update company profile
+//	@Tags		company profile
+//	@Accept		json
+//	@Produce	json
+//	@Param		Update			body		request.CompanyProfileUpdate	true	"Update"
+//	@Param		Authorization	header		string							true	"bearer token"
+//	@Success	200				{object}	helpers.SuccessResponseJson{}
+//	@Failure	422				{object}	helpers.ErrorResponseJson{}
+//	@Failure	400				{object}	helpers.ErrorResponseJson{}
+//	@Router		/profile/update [put]
 func (cph *CompanyProfileHandler) UpdateCompanyProfile(c *gin.Context) {
 	body := request.CompanyProfileUpdate{}
 
